k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jerry
  labels:
    app: jerry-ai
    environment: staging
